force-app/main/default/objects/Opportunity/fields/Total_Draft_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Draft_Amount__c</fullName>
    <label>Total_Draft_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>