force-app/main/default/objects/Opportunity/fields/Xero_account_ID__c.field-meta.xml
<CustomField>
    <fullName>Xero_account_ID__c</fullName>
    <formula>Account.Xero_contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xero account ID</label>
    <type>Text</type>
</CustomField>