force-app/main/default/objects/Opportunity/fields/XeroContactId__c.field-meta.xml
<CustomField>
    <fullName>XeroContactId__c</fullName>
    <label>XeroContactId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>